// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range should render correctly 1`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8vavbz {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-48yrhd {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
=======
.cache-1sk176y.cache-1sk176y {
  position: left;
}

.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-1f8pz1b {
=======
.emotion-6::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

.cache-1f8pz1b {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-8vavbz e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
=======
      class="e1tqrz513 cache-1sk176y e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-sqntd1 e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-b03wyc e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
>>>>>>> fix: tests
    >
      5 (max)
    </div>
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(-12.799999999999997px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-0"
        value="3"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with input change 1`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8vavbz {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-48yrhd::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
=======
.cache-1sk176y {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd {
>>>>>>> fix: tests
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
<<<<<<< HEAD
  right: 8px;
=======
  left: 8px;
}

<<<<<<< HEAD
.cache-1sk176y.cache-1sk176y {
  position: left;
>>>>>>> fix: adds tests
}

<<<<<<< HEAD
.cache-1aec7k7::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-1f8pz1b {
=======
.emotion-6::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

.cache-1f8pz1b {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-8vavbz e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
=======
      class="e1tqrz513 cache-1sk176y e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-sqntd1 e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-b03wyc e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
>>>>>>> fix: tests
    >
      20 (max)
    </div>
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="test-0"
        value="5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max 1`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8vavbz {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd {
=======
.cache-1sk176y {
>>>>>>> fix: tests after rebase
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

<<<<<<< HEAD
.cache-48yrhd::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
=======
.cache-48yrhd {
>>>>>>> fix: tests
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
<<<<<<< HEAD
  right: 8px;
}

.cache-1aec7k7::before {
=======
  left: 8px;
}

<<<<<<< HEAD
.emotion-6.emotion-6 {
=======
.cache-1sk176y.cache-1sk176y {
>>>>>>> fix: tests after rebase
  position: left;
}

.cache-1sk176y::before {
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

<<<<<<< HEAD
.cache-b03wyc.cache-b03wyc {
  position: right;
}

<<<<<<< HEAD
.emotion-9::before {
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
.cache-b03wyc::before {
>>>>>>> fix: tests after rebase
=======
.cache-1aec7k7::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-e9rypl {
=======
.emotion-9::before {
=======
.cache-b03wyc::before {
>>>>>>> fix: tests after rebase
=======
.cache-1aec7k7::before {
>>>>>>> fix: tests
  right: 16px;
  left: unset;
}

.cache-e9rypl {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1f8pz1b {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-8vavbz e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
=======
      class="e1tqrz513 cache-1sk176y e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-sqntd1 e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-b03wyc e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
>>>>>>> fix: tests
    >
      20 (max)
    </div>
    <div
      class="cache-e9rypl e1tqrz512"
      style="width: -12px; transform: translate3d(12px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(-8px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-1"
        value="10"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max 2`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8vavbz {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd {
=======
.cache-1sk176y {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd {
>>>>>>> fix: tests
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
<<<<<<< HEAD
  right: 8px;
=======
  left: 8px;
}

.emotion-6.emotion-6 {
=======
.cache-1sk176y.cache-1sk176y {
>>>>>>> fix: tests after rebase
  position: left;
>>>>>>> fix: adds tests
}

<<<<<<< HEAD
.cache-1aec7k7::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-1f8pz1b {
=======
.emotion-6::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

.cache-1f8pz1b {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-8vavbz e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
=======
      class="e1tqrz513 cache-1sk176y e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-sqntd1 e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-b03wyc e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
>>>>>>> fix: tests
    >
      20 (max)
    </div>
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max and out of range value 1`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8vavbz {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd {
=======
.cache-1sk176y {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd {
>>>>>>> fix: tests
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  left: 8px;
<<<<<<< HEAD
}

.cache-48yrhd::before {
=======
}

.cache-48yrhd::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

<<<<<<< HEAD
.cache-b03wyc.cache-b03wyc {
  position: right;
}

<<<<<<< HEAD
.emotion-9::before {
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
=======
.cache-b03wyc::before {
>>>>>>> fix: tests after rebase
=======
.cache-1aec7k7::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-e9rypl {
=======
.emotion-9::before {
=======
.cache-b03wyc::before {
>>>>>>> fix: tests after rebase
=======
.cache-1aec7k7::before {
>>>>>>> fix: tests
  right: 16px;
  left: unset;
}

.cache-e9rypl {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1f8pz1b {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-8vavbz e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
=======
      class="e1tqrz513 cache-1sk176y e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-sqntd1 e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-b03wyc e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
>>>>>>> fix: tests
    >
      20 (max)
    </div>
    <div
      class="cache-e9rypl e1tqrz512"
      style="width: -60px; transform: translate3d(12px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(-56px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-1"
        value="30"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max and out of range value 2`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8vavbz {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd {
=======
.cache-1sk176y {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd {
>>>>>>> fix: tests
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  left: 8px;
<<<<<<< HEAD
=======
}

<<<<<<< HEAD
.cache-1sk176y.cache-1sk176y {
  position: left;
>>>>>>> fix: adds tests
}

<<<<<<< HEAD
.cache-48yrhd::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-1f8pz1b {
=======
.emotion-6::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

.cache-1f8pz1b {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-8vavbz e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
=======
      class="e1tqrz513 cache-1sk176y e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-sqntd1 e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-b03wyc e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
>>>>>>> fix: tests
    >
      10 (max)
    </div>
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(-56px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-0"
        value="15"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with one value 1`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8vavbz {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd {
=======
.cache-1sk176y {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd {
>>>>>>> fix: tests
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
<<<<<<< HEAD
  right: 8px;
=======
  left: 8px;
}

.emotion-6.emotion-6 {
=======
.cache-1sk176y.cache-1sk176y {
>>>>>>> fix: tests after rebase
  position: left;
>>>>>>> fix: adds tests
}

<<<<<<< HEAD
.cache-1aec7k7::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-1f8pz1b {
=======
.emotion-6::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

.cache-1f8pz1b {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-8vavbz e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
=======
      class="e1tqrz513 cache-1sk176y e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-sqntd1 e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-b03wyc e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
>>>>>>> fix: tests
    >
      5 (max)
    </div>
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(-32px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with props 1`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1b1tpo3 {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 120px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-122y96x {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 128px;
  left: 8px;
}

.cache-122y96x::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-122y96x::before {
  left: 16px;
  right: unset;
}

.cache-ls5coq {
=======
.cache-13aton4 {
>>>>>>> fix: tests after rebase
=======
.cache-122y96x {
>>>>>>> fix: tests
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 128px;
<<<<<<< HEAD
  right: 8px;
}

.cache-ls5coq::before {
=======
  left: 8px;
}

.cache-122y96x::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-122y96x::before {
  left: 16px;
  right: unset;
}

.cache-ls5coq {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 128px;
  right: 8px;
}

<<<<<<< HEAD
.cache-igw2sl.cache-igw2sl {
  position: right;
}

<<<<<<< HEAD
.emotion-9::before {
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
.cache-igw2sl::before {
>>>>>>> fix: tests after rebase
=======
.cache-ls5coq::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.cache-ls5coq::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-150a4lh {
=======
.emotion-9::before {
=======
.cache-igw2sl::before {
>>>>>>> fix: tests after rebase
=======
.cache-ls5coq::before {
>>>>>>> fix: tests
  right: 16px;
  left: unset;
}

.cache-150a4lh {
  position: absolute;
  top: 120px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-114adej {
  position: absolute;
  top: 114px;
  height: 16px;
  width: 45px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-1b1tpo3 e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-122y96x e7ah3bn0"
=======
      class="e1tqrz513 cache-13aton4 e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-122y96x e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-ls5coq e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-ytsswk e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-igw2sl e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-ls5coq e7ah3bn0"
>>>>>>> fix: tests
    >
      20 (max)
    </div>
    <div
      class="cache-150a4lh e1tqrz512"
      style="width: -225px; transform: translate3d(45px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-114adej e7ah3bn0"
      style="transform: translate3d(25px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="test-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-114adej e7ah3bn0"
      style="transform: translate3d(-200px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="test-1"
        value="30"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with two values 1`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8vavbz {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd {
=======
.cache-1sk176y {
>>>>>>> fix: tests after rebase
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

<<<<<<< HEAD
.cache-48yrhd::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
=======
.cache-48yrhd {
>>>>>>> fix: tests
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
<<<<<<< HEAD
  right: 8px;
=======
  left: 8px;
}

<<<<<<< HEAD
.emotion-6.emotion-6 {
=======
.cache-1sk176y.cache-1sk176y {
>>>>>>> fix: tests after rebase
  position: left;
>>>>>>> fix: adds tests
}

<<<<<<< HEAD
.cache-1aec7k7::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-e9rypl {
=======
.emotion-6::before {
=======
.cache-1sk176y::before {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd::before {
>>>>>>> fix: tests
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

.cache-e9rypl {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1f8pz1b {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-8vavbz e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
=======
      class="e1tqrz513 cache-1sk176y e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-sqntd1 e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-b03wyc e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
>>>>>>> fix: tests
    >
      5 (max)
    </div>
    <div
      class="cache-e9rypl e1tqrz512"
      style="width: -48px; transform: translate3d(-24px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(-32px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(-80px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="rangeInput-1"
        value="10"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with two values input change 1`] = `
<DocumentFragment>
  .cache-2wc9ag {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8vavbz {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e4edff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-48yrhd {
=======
.cache-1sk176y {
>>>>>>> fix: tests after rebase
=======
.cache-48yrhd {
>>>>>>> fix: tests
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  left: 8px;
<<<<<<< HEAD
}

.cache-48yrhd::before {
=======
}

.cache-48yrhd::before {
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

<<<<<<< HEAD
.cache-b03wyc.cache-b03wyc {
  position: right;
}

<<<<<<< HEAD
.emotion-9::before {
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
.cache-48yrhd::before {
  left: 16px;
  right: unset;
}

.cache-1aec7k7 {
  position: absolute;
  font-size: 12px;
  color: #151a2d;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-1aec7k7::before {
=======
.cache-b03wyc::before {
>>>>>>> fix: tests after rebase
=======
.cache-1aec7k7::before {
>>>>>>> fix: tests
  content: '';
  background-color: #151a2d;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

<<<<<<< HEAD
<<<<<<< HEAD
.cache-1aec7k7::before {
  right: 16px;
  left: unset;
}

=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
>>>>>>> fix: adds tests
.cache-e9rypl {
=======
.emotion-9::before {
=======
.cache-b03wyc::before {
>>>>>>> fix: tests after rebase
=======
.cache-1aec7k7::before {
>>>>>>> fix: tests
  right: 16px;
  left: unset;
}

.cache-e9rypl {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1f8pz1b {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-vdae5l {
  position: absolute;
  color: #151a2d;
  background-color: #fff;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-2wc9ag e7ah3bn0"
  >
    <div
      class="cache-8vavbz e1tqrz514"
    />
    <div
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
=======
      class="e1tqrz513 cache-1sk176y e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-48yrhd e7ah3bn0"
>>>>>>> fix: tests
    >
      0 (min)
    </div>
    <div
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
=======
<<<<<<< HEAD:src/components/Range/__tests__/__snapshots__/index.tsx.snap
      class="e10m6u6t3 cache-sqntd1 e7ah3bn0"
=======
      class="emotion-5 emotion-9 emotion-2"
>>>>>>> fix: adds tests:src/components/Range/__tests__/__snapshots__/index.js.snap
>>>>>>> fix: adds tests
=======
      class="e1tqrz513 cache-b03wyc e7ah3bn0"
>>>>>>> fix: tests after rebase
=======
      class="e1tqrz513 cache-1aec7k7 e7ah3bn0"
>>>>>>> fix: tests
    >
      20 (max)
    </div>
    <div
      class="cache-e9rypl e1tqrz512"
      style="width: -12px; transform: translate3d(12px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="test-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-1f8pz1b e7ah3bn0"
      style="transform: translate3d(-8px, 0, 0);"
    >
      <input
        class="cache-vdae5l e1tqrz510"
        name="test-1"
        value="10"
      />
    </span>
  </div>
</DocumentFragment>
`;
